# echoloc-nn

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTONOMOUS_SDLC_EXECUTION_SUMMARY.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  BACKLOG.md  BREAKTHROUGH_RESEARCH_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  Dockerfile  FINAL_EXECUTION_REPORT.md  GENERATION_4_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MODEL_IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_CHARTER.md  README.md  RESEARCH_PUBLICATION_DRAFT.md  ROBUSTNESS_IMPROVEMENTS.md  SECURITY.md  WORKFLOWS.md  autonomous_research_validation.py  basic_validation.py  check_implementation.py  complete_generation_3.py  comprehensive_quality_gates.py  comprehensive_quality_gates_report_1754973953.json  comprehensive_quality_gates_report_1754974019.json  comprehensive_quality_gates_report_1755006807.json  comprehensive_quality_gates_report_1755006879.json  comprehensive_quality_gates_report_1755228393.json  comprehensive_quality_gates_report_1755228952.json  comprehensive_quality_gates_report_1755229112.json  comprehensive_quality_gates_report_1755229223.json  comprehensive_quality_gates_report_1755369101.json  comprehensive_quality_gates_report_1755720010.json  comprehensive_quality_gates_report_1755720111.json  (+38 more)
.terragon/: config.yaml  discovery_history.json  value_discovery.py
docs/: DEPLOYMENT_GUIDE.md  QUANTUM_PLANNING_GUIDE.md  ROADMAP.md
docs/adr/: 001-cnn-transformer-architecture.md  template.md
echoloc/: __init__.py  demo.py  encoder.py  locator.py  signals.py  simulator.py
echoloc_nn/: __init__.py  chirp.py  demo.py  encoder.py  locator.py  simulator.py
echoloc_nn/globalization/: __init__.py  compliance.py  i18n.py
echoloc_nn/hardware/: __init__.py  arduino_interface.py  raspberry_pi.py  sensor_config.py  ultrasonic_array.py
echoloc_nn/inference/: __init__.py  config.py  locator.py
echoloc_nn/optimization/: __init__.py  advanced_caching.py  advanced_optimizer.py  advanced_quantization.py  auto_scaler.py  auto_scaler_advanced.py  caching.py  concurrent_inference.py  concurrent_processor.py  edge_optimizer.py  enhanced_monitoring.py  generation_3_optimizer.py  generation_4_optimizer.py  model_optimizer.py  neural_architecture_search.py  performance_engine.py  performance_monitor.py  quantum_accelerator.py  (+3 more)
examples/: research_demo.py  robustness_demo.py
scripts/: basic_performance_test.py  performance_benchmark.py  quality_gates_summary.py  security_scan.py  simple_security_test.py  validate_generation_3_optimizations.py  validate_performance.py
tests/: test_echoloc.py  test_hardware.py  test_models.py  test_optimization.py  test_quantum_planning.py  test_robustness_gen2.py  test_sentiment.py  test_signal_processing.py
(+58 files in other folders)
